--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
+html {
+  scroll-behavior: smooth;
+}
 a {
   text-decoration: none;
   color: black;
